// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`'preprocess' option should work with async "preprocessor" function option: errors 1`] = `[]`;

exports[`'preprocess' option should work with async "preprocessor" function option: module 1`] = `
"// Imports
import ___HTML_LOADER_GET_SOURCE_FROM_IMPORT___ from "../../src/runtime/getUrl.js";
var ___HTML_LOADER_IMPORT_0___ = new URL("./image.png", import.meta.url);
// Module
var code = \`<div>
  <p>Alexander Krasnoyarov</p>
  <img src="\${___HTML_LOADER_IMPORT_0___}" alt="alt" />
<div>
\`;
// Exports
export default code;"
`;

exports[`'preprocess' option should work with async "preprocessor" function option: result 1`] = `
"<div>
  <p>Alexander Krasnoyarov</p>
  <img src="replaced_file_protocol_/webpack/public/path/image.png" alt="alt" />
<div>
"
`;

exports[`'preprocess' option should work with async "preprocessor" function option: warnings 1`] = `[]`;

exports[`'preprocess' option should work with the "preprocessor" option #2: errors 1`] = `[]`;

exports[`'preprocess' option should work with the "preprocessor" option #2: module 1`] = `
"// Imports
import ___HTML_LOADER_GET_SOURCE_FROM_IMPORT___ from "../../src/runtime/getUrl.js";
var ___HTML_LOADER_IMPORT_0___ = new URL("./image.png.webp", import.meta.url);
var ___HTML_LOADER_IMPORT_1___ = new URL("./image.png", import.meta.url);
// Module
var code = \`<picture><source type="image/webp" srcset="\${___HTML_LOADER_IMPORT_0___}"><img src="\${___HTML_LOADER_IMPORT_1___}"></picture>
\`;
// Exports
export default code;"
`;

exports[`'preprocess' option should work with the "preprocessor" option #2: result 1`] = `
"<picture><source type="image/webp" srcset="replaced_file_protocol_/webpack/public/path/image.png.webp"><img src="replaced_file_protocol_/webpack/public/path/image.png"></picture>
"
`;

exports[`'preprocess' option should work with the "preprocessor" option #2: warnings 1`] = `[]`;

exports[`'preprocess' option should work with the "preprocessor" option: errors 1`] = `[]`;

exports[`'preprocess' option should work with the "preprocessor" option: module 1`] = `
"// Imports
import ___HTML_LOADER_GET_SOURCE_FROM_IMPORT___ from "../../src/runtime/getUrl.js";
var ___HTML_LOADER_IMPORT_0___ = new URL("./image.png", import.meta.url);
// Module
var code = \`<div>
  <p>Alexander Krasnoyarov</p>
  <img src="\${___HTML_LOADER_IMPORT_0___}" alt="alt" />
<div>
\`;
// Exports
export default code;"
`;

exports[`'preprocess' option should work with the "preprocessor" option: result 1`] = `
"<div>
  <p>Alexander Krasnoyarov</p>
  <img src="replaced_file_protocol_/webpack/public/path/image.png" alt="alt" />
<div>
"
`;

exports[`'preprocess' option should work with the "preprocessor" option: warnings 1`] = `[]`;

exports[`'preprocess' option should work with the async "preprocessor" function option #2: errors 1`] = `[]`;

exports[`'preprocess' option should work with the async "preprocessor" function option #2: module 1`] = `
"// Imports
import ___HTML_LOADER_GET_SOURCE_FROM_IMPORT___ from "../../src/runtime/getUrl.js";
var ___HTML_LOADER_IMPORT_0___ = new URL("./image.png.webp", import.meta.url);
var ___HTML_LOADER_IMPORT_1___ = new URL("./image.png", import.meta.url);
// Module
var code = \`<picture><source type="image/webp" srcset="\${___HTML_LOADER_IMPORT_0___}"><img src="\${___HTML_LOADER_IMPORT_1___}"></picture>
\`;
// Exports
export default code;"
`;

exports[`'preprocess' option should work with the async "preprocessor" function option #2: result 1`] = `
"<picture><source type="image/webp" srcset="replaced_file_protocol_/webpack/public/path/image.png.webp"><img src="replaced_file_protocol_/webpack/public/path/image.png"></picture>
"
`;

exports[`'preprocess' option should work with the async "preprocessor" function option #2: warnings 1`] = `[]`;
